# python-project-lvl2

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  main.yml  python-package.yml
gendiff/: __init__.py  cli.py  comparator.py  constants.py  diff.py  formatters.py  generator.py  nodetypes.py  parsers.py  renderers.py
gendiff/formatters/: __init__.py  build.py  formatter.py  json.py  plain.py  renderer.py  stylish.py  text.py
gendiff/scripts/: gendiff.py
tests/: '  ast_build_test.py  parsers_test.py  test_generate_diff.py  test_json_diff.py
tests/fixtures/: expected_json.json  expected_message.txt  result.json
