[tool.poetry]
name = "python-project-lvl2"
version = "0.1.0"
description = "This is second python project at my studying at hexlet"
authors = ["Ganeshahere <jamper1488@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
