[tool.poetry]
name = "Ganeshahere_gendiff_lvl2"
version = "0.8.2"
description = "This is second python project at my studying at hexlet"
authors = ["Ganeshahere <jamper1488@gmail.com>"]
packages = [
    { include = "gendiff" },
]
[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
pytest = "^6.1.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"